Added Testimonial and images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Iqra Tech - IT Solutions & Services Agency</title>
-    <meta name="description" content="">
+    <meta name="description" content="Driven by a passion for innovation, Iqra specializes in delivering top-quality technology solutions">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
@@ -333,7 +333,7 @@
                                         <div class="row">
                                             <div class="col-xl-5 col-lg-4 col-md-5">
                                                 <div class="tp-about-thumb">
-                                                    <img data-speed=".8" src="assets/img/home-01/about/about-1.jpg" alt="">
+                                                    <img data-speed=".8" src="assets/img/pexels-divinetechygirl-1181673.jpg" alt="">
                                                 </div>
                                             </div>
                                             <div class="col-xl-7 col-lg-8 col-md-7">
@@ -372,7 +372,7 @@
                 <!-- banner area start -->
                 <div class="tp-banner-area">
                     <div class="tp-banner-img">
-                        <img class="w-100" data-speed=".7" src="assets/img/home-01/banner/banner-1.jpg" alt="">
+                        <img class="w-100" data-speed=".7" src="assets/img/pexels-lum3n-44775-399161.jpg" alt="">
                     </div>
                 </div>
                 <!-- banner area end -->
@@ -463,12 +463,12 @@
                                     </div>
                                     <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-7">
                                         <div class="tp-service-content">
-                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="service-details-light.html">Web Development</a></h4>
+                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="#">Web Development</a></h4>
                                             <p>
                                                 Whether you need stunning visuals for your website, captivating graphics <br> for your marketing materials, or innovative UI/UX designs for your app, our <br> team of experts is here to turn your vision into reality.
                                             </p>
                                             <div class="tp-service-btn">
-                                                <a href="service-details-light.html" class="tp-btn-black btn-red-bg">
+                                                <a href="#" class="tp-btn-black btn-red-bg">
                                                     <span class="tp-btn-black-filter-blur">
                                                         <svg width="0" height="0">
                                                             <defs>
@@ -515,12 +515,12 @@
                                     </div>
                                     <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-7">
                                         <div class="tp-service-content">
-                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="service-details-light.html">SAP Development</a></h4>
+                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="#">SAP Development</a></h4>
                                             <p>
                                                 customizing, enhancing, and maintaining SAP software to meet specific business needs. These services ensure seamless integration, automation, and optimization of enterprise processes.
                                             </p>
                                             <div class="tp-service-btn">
-                                                <a href="service-details-light.html" class="tp-btn-black btn-red-bg">
+                                                <a href="#" class="tp-btn-black btn-red-bg">
                                                     <span class="tp-btn-black-filter-blur">
                                                         <svg width="0" height="0">
                                                             <defs>
@@ -555,7 +555,7 @@
                                     </div>
                                     <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
                                         <div class="tp-service-thumb text-end">
-                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/home-01/service/service-2.jpg" alt="">
+                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/saporiginal.jpg" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -569,12 +569,12 @@
                                     </div>
                                     <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-7">
                                         <div class="tp-service-content">
-                                            <h4 class="tp-section-title"><a class="tp_text_invert" href="service-details-light.html">Artificial Intelligence</a></h4>
+                                            <h4 class="tp-section-title"><a class="tp_text_invert" href=#">Artificial Intelligence</a></h4>
                                             <p>
                                               Designing, building, and deploying intelligent systems that automate tasks, analyze data, and enhance decision-making. These services leverage machine learning, deep learning, and natural language processing to create scalable AI solutions for businesses.
                                             </p>
                                             <div class="tp-service-btn">
-                                                <a href="service-details-light.html" class="tp-btn-black btn-red-bg">
+                                                <a href="#" class="tp-btn-black btn-red-bg">
                                                     <span class="tp-btn-black-filter-blur">
                                                         <svg width="0" height="0">
                                                             <defs>
@@ -608,7 +608,7 @@
                                     </div>
                                     <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-4">
                                         <div class="tp-service-thumb text-end">
-                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/home-01/service/service-3.jpg" alt="">
+                                            <img class="tp_fade_anim" data-fade-from="right" data-delay=".2" src="assets/img/pexels-thisisengineering-3913025.jpg" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -1237,12 +1237,7 @@
                                     <div class="tp-testimonial-item white-style">
                                         <div class="tp-testimonial-text">
                                             <p>
-                                                “Agntix studio ability to
-                                                create a high quality UI is stands
-                                                out. It’s something we placed a
-                                                premium on. A studio with
-                                                passionate, professional, fun
-                                                and full creativity.
+                                                “Working with Iqra for our SAP implementation was a game-changer. Their team delivered a seamless transition, customized solutions for our business needs, and provided exceptional support throughout the process.
                                             </p>
                                         </div>
                                         <div class="tp-testimonial-author d-flex align-items-center">
@@ -1260,12 +1255,7 @@
                                     <div class="tp-testimonial-item green-style">
                                         <div class="tp-testimonial-text">
                                             <p>
-                                                “Agntix studio ability to
-                                                create a high quality UI is stands
-                                                out. It’s something we placed a
-                                                premium on. A studio with
-                                                passionate, professional, fun
-                                                and full creativity.
+                                                “The web development team at Iqra Tech built us a stunning, high-performance website that perfectly aligns with our brand. Their attention to detail, fast turnaround, and scalable solutions have helped us enhance our online presence and customer engagement. Truly a top-tier IT partner!
                                             </p>
                                         </div>
                                         <div class="tp-testimonial-author d-flex align-items-center">
@@ -1283,12 +1273,7 @@
                                     <div class="tp-testimonial-item black-style">
                                         <div class="tp-testimonial-text">
                                             <p>
-                                                “Agntix studio ability to
-                                                create a high quality UI is stands
-                                                out. It’s something we placed a
-                                                premium on. A studio with
-                                                passionate, professional, fun
-                                                and full creativity.
+                                                “From cloud migration to cybersecurity, [Your Company Name] has been our trusted IT partner. Their proactive approach and deep technical knowledge have helped us stay ahead in a competitive market. They don’t just provide services—they deliver real business value.
                                             </p>
                                         </div>
                                         <div class="tp-testimonial-author d-flex align-items-center">
@@ -1306,12 +1291,7 @@
                                     <div class="tp-testimonial-item white-style">
                                         <div class="tp-testimonial-text">
                                             <p>
-                                                “Agntix studio ability to
-                                                create a high quality UI is stands
-                                                out. It’s something we placed a
-                                                premium on. A studio with
-                                                passionate, professional, fun
-                                                and full creativity.
+                                                “After struggling with inefficient ERP processes, Iqra Tech stepped in with their SAP expertise. Their consultants optimized our system, trained our team, and continue to provide outstanding support. Our productivity has skyrocketed—thank you!
                                             </p>
                                         </div>
                                         <div class="tp-testimonial-author d-flex align-items-center">
@@ -1329,12 +1309,7 @@
                                     <div class="tp-testimonial-item grey-style">
                                         <div class="tp-testimonial-text">
                                             <p>
-                                                “Agntix studio ability to
-                                                create a high quality UI is stands
-                                                out. It’s something we placed a
-                                                premium on. A studio with
-                                                passionate, professional, fun
-                                                and full creativity.
+                                                What sets Iqra apart is their ability to blend innovation with practicality. Whether it’s AI integration, IoT solutions, or enterprise software, they deliver cutting-edge technology tailored to our goals. A forward-thinking partner we can rely on."
                                             </p>
                                         </div>
                                         <div class="tp-testimonial-author d-flex align-items-center">
@@ -1348,11 +1323,11 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide">
+                                <!-- <div class="swiper-slide">
                                     <div class="tp-testimonial-item green-style">
                                         <div class="tp-testimonial-text">
                                             <p>
-                                                “Agntix studio ability to
+                                                “Iqra Tech ability to
                                                 create a high quality UI is stands
                                                 out. It’s something we placed a
                                                 premium on. A studio with
@@ -1370,7 +1345,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
