--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
             <div class="tp-offcanvas-top d-flex align-items-center justify-content-between">
                 <div class="tp-offcanvas-logo">
                     <a href="index.html">
-                        <img class="logo-1" data-width="120" src="assets/img/logo/logo-black.png" alt="">
-                        <img class="logo-2" data-width="120" src="assets/img/logo/logo-white.png" alt="">
+                        <!-- <img class="logo-1" data-width="120" src="assets/img/logo/logo-black.png" alt="">
+                        <img class="logo-2" data-width="120" src="assets/img/logo/logo-white.png" alt=""> -->
+                        <h5>iqra tech</h5>
                     </a>
                 </div>
                 <div class="tp-offcanvas-close">
@@ -203,8 +204,8 @@
                 <div class="tp-offcanvas-contact">
                     <h3 class="tp-offcanvas-title sm">Information</h3>
                     <ul>
-                        <li><a href="tel:1245654">+ 4 20 7700 1007</a></li>
-                        <li><a href="mailto:hello@diego.com">contact@iqratech.com</a></li>
+                        <li><a href="tel:1245654">+91 9029917778</a></li>
+                        <li><a href="mailto:contact@iqratech.com">contact@iqratech.com</a></li>
                         <!-- <li><a href="#">Mumbai, India</a></li> -->
                     </ul>
                 </div>
@@ -1580,8 +1581,8 @@
                             <div class="tp-footer-widget tp-footer-col-3 pb-40 mb-30 tp_fade_anim" data-delay=".7">
                                 <h4 class="tp-footer-widget-title-sm pre mb-20">Contact</h4>
                                 <div class="tp-footer-widget-info">
-                                    <a href="mailto:agntixs@studio.com">contact@iqratech.com</a>
-                                    <a href="tel:+3025550107">+91 9029917778</a>
+                                   <a href="mailto:contact@iqratech.com">contact@iqratech.com</a>
+                                    <a href="tel:919029917778">+91 9029917778</a>
                                 </div>
                                 <!-- <div class="tp-footer-widget-info">
                                     <a href="https://www.google.com/maps/" target="_blank">4</a>
