--- a/contactus.html
+++ b/contactus.html
@@ -539,8 +539,8 @@
                                 <div class="tp-footer-widget tp-footer-col-3 pb-40 mb-30 tp_fade_anim" data-delay=".7">
                                     <h4 class="tp-footer-widget-title-sm pre mb-20">Contact</h4>
                                     <div class="tp-footer-widget-info">
-                                        <a href="mailto:agntixs@studio.com">contact@iqratech.com</a>
-                                    <a href="tel:+3025550107">+91 9029917778</a>
+                                        <a href="mailto:contact@iqratech.com">contact@iqratech.com</a>
+                                    <a href="tel:919029917778">+91 9029917778</a>
                                     </div>
                                    
                                 </div>
