--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                 <!-- project area end -->
 
                 <!-- funfact area start -->
-                <div class="tp-funfact-area">
+                <!-- <div class="tp-funfact-area">
                     <div class="tp-funfact-panel-wrap">
                         <div class="tp-funfact-panel">
                             <div class="tp-funfact-green-wrap include-bg tp-text-bounce-trigger p-relative" data-bg-color="#F6F6F9">
@@ -1116,7 +1116,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- funfact area end -->
 
                 <!-- work area start -->
@@ -1582,7 +1582,7 @@
                                 <h4 class="tp-footer-widget-title-sm pre mb-20">Contact</h4>
                                 <div class="tp-footer-widget-info">
                                    <a href="mailto:contact@iqratech.com">contact@iqratech.com</a>
-                                    <a href="tel:919029917778">+91 9029917778</a>
+                                    <a href="tel:+919029917778">+91 9029917778</a>
                                 </div>
                                 <!-- <div class="tp-footer-widget-info">
                                     <a href="https://www.google.com/maps/" target="_blank">4</a>
