--- a/index.html
+++ b/index.html
@@ -546,10 +546,9 @@
                                             </div>
                                             <div class="tp-service-category">
                                                 <span>ABAP Development</span>
-                                                <span>SAP HANA</span>
-                                                <span>SAP Integration Suite</span>
+                                                <span>SAP Implementation</span>
+                                                <span>SAP Support</span>
                                                 <span>SAP S/4HANA Customization</span>
-                                                <span>SAP BW/BI </span>
                                                 <span>SAP Cloud Application Development</span>
                                             </div>
                                         </div>
@@ -1274,7 +1273,7 @@
                                     <div class="tp-testimonial-item black-style">
                                         <div class="tp-testimonial-text">
                                             <p>
-                                                “From cloud migration to cybersecurity, [Your Company Name] has been our trusted IT partner. Their proactive approach and deep technical knowledge have helped us stay ahead in a competitive market. They don’t just provide services—they deliver real business value.
+                                                “From cloud migration to cybersecurity, iQRA has been our trusted IT partner. Their proactive approach and deep technical knowledge have helped us stay ahead in a competitive market. They don’t just provide services—they deliver real business value.
                                             </p>
                                         </div>
                                         <div class="tp-testimonial-author d-flex align-items-center">
